--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "child_process": "^1.0.2",
     "hamburger-react": "^2.4.0",
     "next": "10.0.6",
+    "nodemailer": "^6.4.17",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
@@ -47,5 +49,8 @@
         ]
       }
     }
+  },
+  "browser":{
+    "child_process": false
   }
 }
