--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "child_process": "^1.0.2",
     "hamburger-react": "^2.4.0",
     "next": "10.0.6",
@@ -50,7 +51,7 @@
       }
     }
   },
-  "browser":{
+  "browser": {
     "child_process": false
   }
 }
