--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^0.21.1",
     "child_process": "^1.0.2",
     "hamburger-react": "^2.4.0",
     "next": "10.0.6",
-    "nodemailer": "^6.4.17",
+    "nodemailer": "^6.4.18",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
@@ -50,8 +51,5 @@
         ]
       }
     }
-  },
-  "browser": {
-    "child_process": false
   }
 }
