--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hamburger-react": "^2.4.0",
     "next": "10.0.6",
     "nodemailer": "^6.4.18",
+    "nodemailer-mailgun-transport": "^2.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
